--- a/testgit.html
+++ b/testgit.html
@@ -7,6 +7,7 @@
     </head>
     <body>
         <h1>This is a change</h1>
+        <h2>This is added now</h2>
         Hello, Git World !
     </body>
 </html>
